Minor line changes to README

--- a/README
+++ b/README
@@ -42,13 +42,13 @@ GIT workflow:
 -- Do your work
 
 -- Stop working, commit your work to your local repository, either --
-> git add 'files_you_have_been_working_with' 			# Commits only named files 
+> git add 'files_you_have_been_working_with'		# Commits only named files 
 > git commit -m 'commit_message_which_makes_some_sense'
 
 -- OR --
-> git commit -a -m 'message'    				# This commits all files.   
+> git commit -a -m 'message'   				# This commits all files.   
 
--- HOX! Commit only commits to your local repository. So you need to push it to master
--- repository (to github.com). Also remember to add some meaningful commit message. 
--- Don't use -m "another commit".
+-- HOX! Commit only commits to your local repository. So you need to push it to 
+-- master repository (to github.com). Also remember to add some meaningful commit 
+-- message. Don't use -m "another commit".
 > git push 
